update the previous code, change the count of mail & delete the mail between