@@ -2,19 +2,21 @@ package com.driver;
 
 import java.util.ArrayList;
 import java.util.Date;
+import java.util.LinkedList;
+import java.util.List;
 
 public class Gmail extends Email {
 
     int inboxCapacity; //maximum number of mails inbox can store
     //Inbox: Stores mails. Each mail has date (Date), sender (String), message (String). It is guaranteed that message is distinct for all mails.
-    private ArrayList<MessageRecord> Inbox;
+    private LinkedList<MessageRecord> Inbox;
     //Trash: Stores mails. Each mail has date (Date), sender (String), message (String)
-    private ArrayList<MessageRecord> Trash;
+    private List<MessageRecord> Trash;
     public Gmail(String emailId, int inboxCapacity) {
         super(emailId);
         // initialize the list with new keyword
         this.inboxCapacity = inboxCapacity;
-        this.Inbox = new ArrayList<>();
+        this.Inbox = new LinkedList<>();
         this.Trash = new ArrayList<>();
     }
 
@@ -26,11 +28,12 @@ public class Gmail extends Email {
 
         // when my Inbox will be full
         if(Inbox.size() >= inboxCapacity){
+            Trash.add(Inbox.removeFirst());
             // here I have to oldest mail in trast list
-            // oldest means remove from 0th index mail, before removing the list I have to keep the mail data
-            MessageRecord oldMessage = Inbox.get(0);
-            Inbox.remove(0);
-            Trash.add(oldMessage);
+//            // oldest means remove from 0th index mail, before removing the list I have to keep the mail data
+//            MessageRecord oldMessage = Inbox.get(0);
+//            Inbox.remove(0);
+//            Trash.add(oldMessage);
         }
 
         // receive new mail in Inbox
@@ -42,26 +45,12 @@ public class Gmail extends Email {
         // Each message is distinct
         // If the given message is found in any mail in the inbox, move the mail to trash, else do nothing
 
-        // here I want to delete the message in inbox list, move in trash list
-        // first I have to check the given message is present in list or not
-        int foundIndex = Integer.MIN_VALUE;
-        for(int i=0; i<Inbox.size(); i++){
-            if(message.equals(Inbox.get(i).getMessage())){
-                // update the index
-                foundIndex = i;
-                break;
+        for(MessageRecord messageRecord : Inbox){
+            if(messageRecord.getMessage().equals(message)){
+                Trash.add(messageRecord);
+                Inbox.remove(messageRecord);
+                return;
             }
-        }
-
-        // after getting the index. that particular index message remove from Inbox
-        if(foundIndex != Integer.MIN_VALUE){
-            MessageRecord messageRecord = Inbox.get(foundIndex);
-            // remove from Inbox
-            Inbox.remove(foundIndex);
-            // add in Trash list
-            Trash.add(messageRecord);
-        }else {
-            return;
         }
     }
 
@@ -74,7 +63,7 @@ public class Gmail extends Email {
             return null;
         }else {
             // I have to return the latest mail(means lastIndex mail)
-            return Inbox.get(Inbox.size()-1).getMessage();   /// return only message thing
+            return Inbox.getLast().getMessage();   /// return only message thing
         }
     }
 
@@ -88,7 +77,7 @@ public class Gmail extends Email {
             return null;
         }else {
             // have to return 0th index message. because its a oldest mail
-            return Inbox.get(0).getMessage();
+            return Inbox.getFirst().getMessage();
         }
     }
 
@@ -99,9 +88,9 @@ public class Gmail extends Email {
         // use loop travel from 0 to lastIndex, then I will check data is in given range or not
         int countMail = 0;
         for(MessageRecord currentMessageRecord : Inbox){
+            Date date = currentMessageRecord.getDate();
             // now I will check for currentMessage, date is given range or not
-            if ((currentMessageRecord.getDate().compareTo(start) >= 0)  &&
-                    (currentMessageRecord.getDate().compareTo(end)>=0)){
+            if (!date.before(start) && !date.after(end)){
                 countMail ++;
             }
         }
